--- a/member-api/Dockerfile
+++ b/member-api/Dockerfile
@@ -3,6 +3,7 @@ FROM openjdk:21-jdk
 ARG PROFILES
 ARG ENV
 
-COPY build/libs/member-api-0.0.1-SNAPSHOT.jar app.jar
+COPY build/libs/member-api-0.0.1-SNAPSHOT.jar member-api/member-app.jar
 
-ENTRYPOINT ["java", "-Dspring.profiles.active=${PROFILES}", "-Dserver.env=${ENV}", "-jar", "app.jar"]
+WORKDIR /member-api
+ENTRYPOINT ["java", "-Dspring.profiles.active=${PROFILES}", "-Dserver.env=${ENV}", "-jar", "member-app.jar"]
