fix: #434 PR에 따른 변경점 적용

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -102,12 +102,12 @@ jobs:
       - name: Build member-api with Gradle
         run : |
           cd member-api
-          ./gradlew clean build -x test
+          ./gradlew clean build
 
       - name: Build alert-api with Gradle
         run : |
           cd alert-api
-          ./gradlew clean build -x test
+          ./gradlew clean build
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
