--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ alert-api/logs/**
 member-api/member-api/logs/**
 admin-api/admin-api/logs/**
 alert-api/alert-api/logs/**
+member-api/src/main/resources/static/docs/**
+alert-api/src/main/resources/static/docs/**
 
 ### STS ###
 .apt_generated
