chore: restdocs 추가에 따른 cd 워크플로우 파일 수정

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -50,19 +50,6 @@ jobs:
           cloud.aws.credentials.secretKey: ${{ secrets.AWS_ACCESS_SECRET }}
           custom.domain.image.baseUrl: ${{ secrets.BASE_URL }}
 
-      - name: Set up alert-api application.yml
-        uses: microsoft/variable-substitution@v1
-        with:
-          files: ./alert-api/src/main/resources/application.yml
-        env:
-          spring.data.mongodb.uri: ${{ secrets.MONGO_URI }}
-          spring.datasource.url: ${{ secrets.LOCAL_DB_URL }}
-          spring.datasource.username: ${{ secrets.LOCAL_DB_HOST }}
-          spring.datasource.password: ${{ secrets.LOCAL_DB_PASSWORD }}
-          spring.security.jwt.secret: ${{ secrets.JWT_SECRET_KEY }}
-          kafka.url: ${{ secrets.KAFKA_URL }}
-          custom.domain.image.baseUrl: ${{ secrets.BASE_URL }}
-
 #      - name: Set up member-api application.yml
 #        uses: microsoft/variable-substitution@v1
 #        with:
@@ -102,11 +89,7 @@ jobs:
       - name: Build member-api with Gradle
         run : |
           cd member-api
-          ./gradlew clean build
-
-      - name: Build alert-api with Gradle
-        run : |
-          cd alert-api
+          chmod +x ./gradlew
           ./gradlew clean build
 
       - name: Login to DockerHub
@@ -116,16 +99,10 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build member-api with Docker
-        run : docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/kernelsquare-member ./member-api
-
-      - name: Build alert-api with Docker
-        run : docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/kernelsquare-alert ./alert-api
+        run : docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/kernelsquare ./member-api
 
       - name: member-api Docker push
-        run : docker push ${{ secrets.DOCKERHUB_USERNAME }}/kernelsquare-member:latest
-
-      - name: alert-api Docker push
-        run : docker push ${{ secrets.DOCKERHUB_USERNAME }}/kernelsquare-alert:latest
+        run : docker push ${{ secrets.DOCKERHUB_USERNAME }}/kernelsquare:latest
 
   deploy:
     needs: if-merge
@@ -160,7 +137,6 @@ jobs:
           aws ec2 authorize-security-group-ingress --group-name ${{ secrets.AWS_SG_NAME }} --protocol tcp --port 443 --cidr ${{ steps.ip.outputs.ipv4 }}/32
           aws ec2 authorize-security-group-ingress --group-name ${{ secrets.AWS_SG_NAME }} --protocol tcp --port 8501 --cidr ${{ steps.ip.outputs.ipv4 }}/32
           aws ec2 authorize-security-group-ingress --group-name ${{ secrets.AWS_SG_NAME }} --protocol tcp --port 8502 --cidr ${{ steps.ip.outputs.ipv4 }}/32
-          aws ec2 authorize-security-group-ingress --group-name ${{ secrets.AWS_SG_NAME }} --protocol tcp --port 8503 --cidr ${{ steps.ip.outputs.ipv4 }}/32
 
       # 블루/그린 헬스체크로 변수 초기화
       - name: Blue/Green health check
@@ -202,8 +178,7 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           script_stop: true
           script: |
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/kernelsquare-member
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/kernelsquare-alert
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/kernelsquare
             sudo docker-compose up -d
         if: ${{ env.TARGET_UPSTREAM == 'blue' }}
 
@@ -215,8 +190,7 @@ jobs:
           key: ${{ secrets.GREEN_SSH_KEY }}
           script_stop: true
           script: |
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/kernelsquare-member
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/kernelsquare-alert
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/kernelsquare
             sudo docker-compose up -d
         if: ${{ env.TARGET_UPSTREAM == 'green' }}
 
@@ -227,7 +201,7 @@ jobs:
           # 총 5번 하는데, 30초의 간격을 두고함. 이때까지 응답이 정상이 아니라면 배포 실패
           max-attempts: 5 # Optional, defaults to 1
           retry-delay: 30s # Optional, only applicable to max-attempts > 1
-#
+
       - name: Check the deployed prod2 service URL
         uses: jtalk/url-health-check-action@v3
         with:
@@ -262,10 +236,8 @@ jobs:
           script: |
             sudo docker stop prod1
             sudo docker stop prod2
-            sudo docker stop alert
             sudo docker rm prod1
             sudo docker rm prod2
-            sudo docker rm alert
         if: ${{ env.TARGET_UPSTREAM == 'green' }}
 
       # 기존 인스턴스 중단
@@ -279,10 +251,8 @@ jobs:
           script: |
             sudo docker stop prod1
             sudo docker stop prod2
-            sudo docker stop alert
             sudo docker rm prod1
             sudo docker rm prod2
-            sudo docker rm alert
         if: ${{ env.TARGET_UPSTREAM == 'blue' }}
 
       # 깃허브 러너 아이피를 인바운드 룰에서 제거
@@ -295,4 +265,3 @@ jobs:
           aws ec2 revoke-security-group-ingress --group-name ${{ secrets.AWS_SG_NAME }} --protocol tcp --port 443 --cidr ${{ steps.ip.outputs.ipv4 }}/32
           aws ec2 revoke-security-group-ingress --group-name ${{ secrets.AWS_SG_NAME }} --protocol tcp --port 8501 --cidr ${{ steps.ip.outputs.ipv4 }}/32
           aws ec2 revoke-security-group-ingress --group-name ${{ secrets.AWS_SG_NAME }} --protocol tcp --port 8502 --cidr ${{ steps.ip.outputs.ipv4 }}/32
-          aws ec2 revoke-security-group-ingress --group-name ${{ secrets.AWS_SG_NAME }} --protocol tcp --port 8503 --cidr ${{ steps.ip.outputs.ipv4 }}/32
