--- a/member-api/src/main/resources/application.yml
+++ b/member-api/src/main/resources/application.yml
@@ -77,7 +77,7 @@ spring:
           github:
             client-id: ${SOCIAL_GITHUB_CLIENT_ID}
             client-secret: ${SOCIAL_GITHUB_CLIENT_SECRET}
-            redirect-uri: http://localhost:8501/login/oauth2/code/github
+            redirect-uri: http://dev-back.kernelsquare.live:8501/login/oauth2/code/github
             scope:
               - user:email
 
