fix: cd-dev 잘못된 부분 수정 4차
- EC2_USERNAME -> DEV_SSH_USER

--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -122,8 +122,8 @@ jobs:
       - name: Deploy and Run
         uses: appleboy/ssh-action@master
         with:
+          username: ${{ secrets.DEV_SSH_USER }}
           host: ${{ secrets.DEV_IP }}
-          username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.DEV_SSH_KEY }}
           script: |
             sudo docker stop prod1-dev || true
