Infra: application.yml 에서 management 부분 수정 및 추가

--- a/member-api/src/main/resources/application.yml
+++ b/member-api/src/main/resources/application.yml
@@ -133,7 +133,14 @@ management:
   endpoints:
     web:
       exposure:
-        include: prometheus, health, info, metrics, tempo
+        include: *
+
+  metrics:
+    distribution:
+      percentiles-histogram:
+        http:
+          server:
+            requests: 'true'
 
 ---
 
