fix: include 부분 원상복구

--- a/member-api/src/main/resources/application.yml
+++ b/member-api/src/main/resources/application.yml
@@ -133,7 +133,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: '*'
+        include: health, info, metrics, prometheus, tempo
 
   metrics:
     distribution:
