--- a/domain-mongodb/build.gradle
+++ b/domain-mongodb/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     //mongodb
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 
+    //jasypt
+    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
+
     //Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
