refactor: ci에서 깃허브 액션 환경에서 테스트할 때 필요한 datahub를 docker-compose를 이용하여 생성하는 로직 추가 및 서비스 상에서 사용안하는 Kafka.yml, MongoDB.yml 삭제

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,12 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
+      - name: Set up DataHub with Docker
+        run: |
+          echo ${{ secrets.CI_DOCKER_COMPOSE }} > docker-compose.yml
+          docker-compose up -d
+          docker ps
+
       - name: Test domain-mysql with Gradle
         run: |
           cd domain-mysql
