refactor: cd 수정 및 오타 수정

--- a/member-api/src/main/resources/application.yml
+++ b/member-api/src/main/resources/application.yml
@@ -3,5 +3,5 @@ spring:
     active: local
     group:
       local: common, local-server
-      blue: common, blue-server
-      green: common, green-server
+      prod1: common, prod1-server
+      prod2: common, prod2-server
