--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,20 +14,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-
-#      - run: touch ./domain-mysql/src/main/resources/application.yml
-      - run: echo "${{ secrets.APPLICATION }}" > ./domain-mysql/src/main/resources/application.yml
-      - uses: actions/upload-artifact@v2
+      - name: Checkout
+        uses: actions/checkout@v3
         with:
-          name: application.yml
-          path: ./domain-mysql/src/main/resources/application.yml
-
-      - run: echo "${{ secrets.MEMBER_APPLICATION }}" > ./member-api/src/main/resources/application.yml
-      - uses: actions/upload-artifact@v2
-        with:
-          name: application.yml
-          path: ./member-api/src/main/resources/application.yml
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Set up JDK 21
         uses: actions/setup-java@v3
@@ -35,47 +25,18 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
-#      - name: Set up member-api application.yml
-#        uses: microsoft/variable-substitution@v1
-#        with:
-#          files: ./member-api/src/main/resources/application.yml
-#        env:
-#          spring.datasource.url: ${{ secrets.LOCAL_DB_URL }}
-#          spring.datasource.username: ${{ secrets.LOCAL_DB_HOST }}
-#          spring.datasource.password: ${{ secrets.LOCAL_DB_PASSWORD }}
-#          spring.redis.host: ${{ secrets.REDIS_HOST }}
-#          spring.redis.port: ${{ secrets.REDIS_PORT }}
-#          spring.data.mongodb.uri: ${{ secrets.MONGO_URI }}
-#          spring.security.jwt.secret: ${{ secrets.JWT_SECRET_KEY }}
-#          cloud.aws.s3.bucket: ${{ secrets.S3_BUCKET_NAME }}
-#          cloud.aws.region.static: ${{ secrets.S3_REGION }}
-#          cloud.aws.credentials.accessKey: ${{ secrets.AWS_ACCESS_KEY }}
-#          cloud.aws.credentials.secretKey: ${{ secrets.AWS_ACCESS_SECRET }}
-#          kafka.url: ${{ secrets.KAFKA_URL }}
-#          custom.domain.image.baseUrl: ${{ secrets.BASE_URL }}
-#          chatgpt.rest-api-key: ${{ secrets.CHAT_GPT_API_KEY }}
-
-#      - name: Set up domain-mysql application.yml
-#        uses: microsoft/variable-substitution@v1
-#        with:
-#          files: ./domain-mysql/src/main/resources/application.yml
-#        env:
-#          spring.datasource.url: ${{ secrets.LOCAL_DB_URL }}
-#          spring.datasource.username: ${{ secrets.LOCAL_DB_HOST }}
-#          spring.datasource.password: ${{ secrets.LOCAL_DB_PASSWORD }}
-
-      - name: Set up domain-mongodb application.yml
+      - name: Set up member-api application-common.yml
         uses: microsoft/variable-substitution@v1
         with:
-          files: ./domain-mongodb/src/main/resources/application.yml
+          files: ./member-api/src/main/resources/application-common.yml
         env:
-          spring.data.mongodb.uri: ${{ secrets.MONGO_URI }}
+          jasypt.password: ${{ secrets.JASYPT_PASSWORD }}
 
       - name: Build member-api with Gradle
         run : |
           cd member-api
           chmod +x ./gradlew
-          ./gradlew clean build
+          ./gradlew build
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
