--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Set up DataHub with Docker
         run: |
-          echo ${{ secrets.CI_DOCKER_COMPOSE }} > docker-compose.yml
+          echo "${{ secrets.CI_DOCKER_COMPOSE }}" > docker-compose.yml
           docker-compose up -d
           docker ps
 
