refactor: redis 관련 파일 domain-redis 모듈로 분리

--- a/member-api/build.gradle
+++ b/member-api/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation project(":core")
     implementation project(":domain-mysql")
     implementation project(":domain-mongodb")
+    implementation project(":domain-redis")
 
     //Security
     implementation 'org.springframework.boot:spring-boot-starter-security'
