refactor: domain-kafka 모듈 생성하여 chatting에서 관련된 파일을 넣어줌

--- a/member-api/build.gradle
+++ b/member-api/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation project(":domain-mysql")
     implementation project(":domain-mongodb")
     implementation project(":domain-redis")
+    implementation project(":domain-kafka")
 
     //Security
     implementation 'org.springframework.boot:spring-boot-starter-security'
