refactor: build.gradle 정리 2차

--- a/member-api/build.gradle
+++ b/member-api/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     annotationProcessor "org.mapstruct:mapstruct-processor:1.4.2.Final"
 
-    //Prometheus
+    //Monitoring
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'io.micrometer:micrometer-registry-prometheus'
 
